# smartfiler

./: .gitignore  README.md
react_csv_frontend/: package-lock.json
react_csv_frontend/public/: index.html
react_frontend/: package-lock.json  package.json
react_frontend/src/: App.css  App.js  ChatWindow.js  DataDisplay.js  Dropzone.js  LoginForm.js  SignUpForm.js
react_frontend/src/components/: Login.js  LoginButton.js  LougoutButton.js  Navigation.js  SignUpButton.js
rust_backend/: .env  Cargo.toml
rust_backend/migrations/2023-07-27-034617_create_users/: up.sql
rust_backend/src/: db.rs  main.rs  models.rs  routes.rs  schema.rs
rust_csv_backend/: README.md
rust_csv_backend/src/: main.rs
