[package]
name = "smartfiler"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
rocket_cors = "0.5.2"
rocket-multipart-form-data = "0.9.0-rc.1"
serde_derive = "1.0.118"
csv = "1.1.6"
serde = "1.0.130"
serde_json = "1.0.72"
reqwest = { version = "0.11.18", features = ["json"] }
diesel = { version = "1.4.5", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

[dependencies.rocket]
version = "0.5.0-rc.3"
features = ["json"]
